--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -31,7 +31,7 @@
     </nav>
 
     <nav id="hamburger-nav">
-        <div class="logo">Rohit Joshi</div>
+        <div class="logo">PORTFOLIO</div>
         <div class="hamburger-menu">
             <div class="hamburger-icon" onclick="toggleMenu()">
                 <span></span>
@@ -52,7 +52,7 @@
             <img src="./Assets/img.png" alt="Rohit Joshi profile picture">
         </div>
         <div class="section__text animate__animated animate__fadeInRight animate__slow">
-            <p class="section__text__p1">Hello I,m</p>
+            <p class="section__text__p1">Hello I'm</p>
             <h1 class="title">Rohit Joshi</h1>
             <p class="section__text__p2">Web Developer</p>
             <div class="btn-container">
